<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/lblTitulo"
        android:textSize="24dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblTitulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/btnagregar" />

    <Button
        android:id="@+id/btnLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAgregar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/btnlista" />

    <Button
        android:id="@+id/btnOrden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLista"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/btnorden" />

</RelativeLayout>